refactor: Update project rendering structure and styles
- Change the dynamic container from Bento Grid to a Projects Container in index.html
- Modify the render function in scripts.js to create project cards with updated HTML structure and classes
- Ensure project cards are responsive and maintain original template styles
- Add click event to project cards for modal opening

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 					<p data-i18n="projects.subtitle">STAR 프레임워크 기반의 프로젝트 성과를 확인하세요.</p>
 				</div>
 			</div>
-			<!-- Dynamic Bento Grid Container -->
-			<div class="bento-grid-container">
-				<div id="bento-grid" class="bento-grid"></div>
+			<!-- Dynamic Projects Container -->
+			<div class="row no-gutters" id="projects-container">
+				<!-- Projects will be rendered here by scripts.js -->
 			</div>
 		</div>
 	</section>
