--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
     /* Project Modal Styles */
@@ -365,7 +366,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:seunghwan.an@example.com" class="contact-link">seunghwan.an@example.com</a>
+              <a href="mailto:seunghwan.an@example.com" class="contact-link">pagebyseungwhan@gmail.com</a>
             </div>
 
           </li>
@@ -379,7 +380,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+821012345678" class="contact-link">+82-10-1234-5678</a>
+              <a href="tel:+821012345678" class="contact-link">+82-10-2055-2691</a>
             </div>
 
           </li>
@@ -851,7 +852,7 @@
           </div>
 
           <!-- Dynamic Project List - populated by JavaScript -->
-          <ul class="project-list" id="project-list">
+          <ul class="project-list grid gap-6 md:grid-cols-2 xl:grid-cols-3" id="project-list">
             <!-- Projects will be injected here dynamically -->
           </ul>
 
