feat: refactor resume data to JSON and auto-render

--- a/index.html
+++ b/index.html
@@ -657,23 +657,21 @@
         </header>
 
         <section class="py-8">
-          <div class="space-y-6">
-            <div class="border-l-2 border-gray-200 pl-4">
-              <p class="text-sm text-gray-500">2024.08 - Present</p>
-              <h3 class="text-lg font-semibold text-gray-900">Senior Product Manager</h3>
-              <p class="text-sm text-gray-600 mt-1">Cross-functional leadership, roadmap, KPI ownership</p>
-            </div>
-            <div class="border-l-2 border-gray-200 pl-4">
-              <p class="text-sm text-gray-500">2022.03 - 2024.08</p>
-              <h3 class="text-lg font-semibold text-gray-900">Product Manager</h3>
-              <p class="text-sm text-gray-600 mt-1">Growth, experimentation, UX optimization</p>
-            </div>
-            <div class="border-l-2 border-gray-200 pl-4">
-              <p class="text-sm text-gray-500">2019.01 - 2022.02</p>
-              <h3 class="text-lg font-semibold text-gray-900">Associate Product Manager</h3>
-              <p class="text-sm text-gray-600 mt-1">MVP delivery, backlog grooming, analytics</p>
-            </div>
-          </div>
+          <div id="experience-list" class="space-y-6"></div>
+        </section>
+
+        <section class="py-8">
+          <header>
+            <h2 class="h2 article-title">Education</h2>
+          </header>
+          <div id="education-list" class="mt-4 space-y-4"></div>
+        </section>
+
+        <section class="py-8">
+          <header class="mb-4">
+            <h2 class="h2 article-title">Skills</h2>
+          </header>
+          <div id="skills-list" class="space-y-4"></div>
         </section>
       </article>
 
