--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Noto+Sans+KR:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -29,9 +29,32 @@
     <section id="about-section"></section>
 
     <!-- Experience Section -->
-    <section id="experience-section">
-      <ul id="experience-list"></ul>
+    <section id="experience-section" class="timeline">
+      <div class="title-wrapper">
+        <div class="icon-box">
+          <ion-icon name="book-outline"></ion-icon>
+			</div>
+        <h3 class="h3">Experience</h3>
+		</div>
+      <ol id="experience-list" class="timeline-list"></ol>
 	</section>
+
+    <!-- Education Section -->
+    <section id="education-section" class="timeline">
+      <div class="title-wrapper">
+        <div class="icon-box">
+          <ion-icon name="book-outline"></ion-icon>
+        </div>
+        <h3 class="h3">Education</h3>
+      </div>
+      <ol id="education-list" class="timeline-list"></ol>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills-section" class="skill">
+      <h3 class="h3 skills-title">My skills</h3>
+      <ul id="skills-list" class="skills-list content-card"></ul>
+    </section>
 
     <!-- Portfolio Section -->
     <section id="portfolio-section">
@@ -41,6 +64,10 @@
 
   <!-- JavaScript -->
   <script src="./assets/js/script.js"></script>
+  
+  <!-- Ion Icons -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
