--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			</div>
         <h3 class="h3">Experience</h3>
 		</div>
-      <ol id="experience-list" class="timeline-list"></ol>
+      <ol id="experience-list"></ol>
 	</section>
 
     <!-- Education Section -->
