Refactor Experience section: reorder content and improve spacing
- Reorder Experience items: Company → Title → Period → Description
- Tighten internal spacing within timeline items
- Fix infinite image loading loop issue
- Update styling for better readability

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <aside class="sticky top-[30px] w-full md:w-[300px] flex-shrink-0 bg-apple-card border border-apple-border rounded-[20px] p-[30px] h-fit md:sticky md:top-[30px] relative top-0 shadow-sm" data-sidebar>
       <div class="flex flex-col gap-[30px]">
         <figure class="w-[180px] h-[180px] mx-auto bg-apple-bg rounded-[20px] overflow-hidden border border-apple-border">
-          <img id="profile-avatar" src="" alt="안승환" class="w-full h-full object-cover block">
+          <img id="profile-avatar" src="" alt="안승환" class="w-full h-full object-cover object-top block">
         </figure>
         <div class="text-center">
           <h1 id="profile-name" class="text-apple-text-primary text-lg font-semibold tracking-[-0.25px] mb-3" title="안승환">안승환</h1>
